Fixed hamburger stretching and updated hamburger url

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
     text-decoration: none;
 }
 
-.tabs span {
+.tabs nav span {
     color: rgb(1, 255, 174);
     padding-top: 20px;
     padding-bottom: 20px;
